--- a/styles/style.css
+++ b/styles/style.css
@@ -47,7 +47,7 @@
 
 .header__subtitle {
   font-size: clamp(0.875rem, 0.226rem + 2.7692vw, 1.4375rem);
-  font-family: var(--accent-fonts);
+  font-family: var(--accent-fonts),sans-serif;
   line-height: 14px;
   text-align: center;
   text-transform: uppercase;
@@ -74,7 +74,7 @@
   position: relative;
   padding: 0;
   text-transform: uppercase;
-  font-family: var(--accent-fonts);
+  font-family: var(--accent-fonts),sans-serif;
   font-size: 14px;
   line-height: 14px;
   transition: 0.3s;
@@ -84,7 +84,6 @@
 .theme-menu__button:focus-visible {
   outline: none;
   opacity: 0.6;
-  transition: 0.3s;
 }
 
 .theme-menu__button::after {
@@ -96,18 +95,16 @@
   height: 2px;
   width: 0;
   transform: scaleX(0.4);
-  transition: 0.3s;
 }
 
 .theme-menu__button:focus-visible::after {
   transform: scaleX(1);
   width: 100%;
-  transition: 0.3s;
 }
 
 .theme-menu__button:disabled {
   pointer-events: none;
-  transition: opacity 0.3s ease;
+  transition: 0.3s ease;
   opacity: 0.6;
 }
 
@@ -121,12 +118,13 @@
 }
 
 .main {
-  background-color: var(--bg-color);
+  background: none;
   margin-top: 100px;
   max-width: 700px;
 }
 
 .card {
+  background-color: var(--bg-color);
   width: 100%;
   border: solid 2px currentColor;
 }
@@ -152,6 +150,7 @@
   border-top: 2px solid currentColor;
   border-bottom: 2px solid currentColor;
   height: clamp(375px, 3.21px + 99vw, 700px);
+  margin-bottom: 25px;
 }
 
 .card__image {
@@ -165,7 +164,7 @@
 .card__label {
   position: absolute;
   mix-blend-mode: hard-light;
-  font-family: var(--accent-fonts);
+  font-family: var(--accent-fonts),sans-serif;
   opacity: 0.5;
   font-size: 14px;
   z-index: 1;
@@ -190,12 +189,11 @@
   font-size: 18px;
   font-weight: var(--main-fonts-weight-regular);
   line-height: 21px;
-  padding: 23px 25px 27px;
+  padding: 0 25px ;
 }
 
 .card .card__text:nth-of-type(2n) {
-  padding-top: 0;
-  padding-bottom: 25px;
+  padding: 23px 25px 27px;
 }
 
 .card__like-wrapper {
@@ -244,6 +242,7 @@
 
 .contour {
   fill: currentColor;
+  transition: 0.3s;
 }
 
 .like-icon.is-liked .contour {
@@ -263,6 +262,7 @@
 
 .heart:active .core {
   fill: red;
+  transition-delay: 0s;
 }
 
 .like-icon.is-liked .core {
@@ -282,6 +282,7 @@
 
 .heart:active .main-body {
   fill: red;
+  transition-delay: 0.05s;
 }
 
 .like-icon.is-liked .main-body {
@@ -291,17 +292,18 @@
 
 .button {
   cursor: pointer;
-  font-family: var(--accent-fonts);
+  font-family: var(--accent-fonts),sans-serif;
   background: var(--bg-color);
   border: 2px solid var(--main-color);
   color: var(--main-color);
+  transition: 0.5s ease-in-out;
   overflow: hidden;
   position: relative;
 }
 
 .button:focus-visible {
   outline: none;
-  box-shadow: 1px 1px 0 2px var(--main-color);
+  box-shadow: 2px 2px 0 0 var(--main-color);
 }
 
 .button::before {
@@ -312,7 +314,6 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  transition: 0.5s ease-in-out;
   transform: translateX(-100%);
 }
 
@@ -332,45 +333,34 @@
 .button__text {
   position: relative;
   text-align: center;
-}
-
-.button:hover .button__text {
   color: var(--button-text-color);
-  z-index: 1;
   mix-blend-mode: difference;
 }
 
-.footer {
-  width: 100%;
-  max-width: 696px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.button:hover .button__text {
+  z-index: 1;
 }
 
-.footer__floppy {
-  fill: currentColor;
-  stroke: currentColor;
+
+
+.save__floppy {
   width: 28px;
   height: 28px;
   margin: 0 0 8px;
-}
-
-.button:hover .footer__floppy {
   fill: var(--button-text-color);
   stroke: var(--button-text-color);
   mix-blend-mode: difference;
 }
 
-.footer__button {
-  margin: 55px 0 100px;
+.save__button {
+  margin: 55px auto 100px;
   padding: 15px 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.footer__button-text {
+.save__button-text {
   font-size: 14px;
 }
 
@@ -378,6 +368,7 @@
   background-color: var(--bg-color);
   padding: 0;
   inset: 0;
+  border: 2px solid var(--main-color);
   max-width: 357px;
 }
 
@@ -408,13 +399,16 @@
 .popup__text {
   flex: 0 1;
   color: var(--main-color);
-  font-family: var(--accent-fonts);
-  max-width: 234px;
+  text-transform: uppercase;
+  font-family: var(--accent-fonts),sans-serif;
+  line-height: 21px;
+  min-width: 234px;
 }
 
 .popup__button {
   padding: 12px 0;
   width: calc(100% - 60px);
+  text-transform: uppercase;
   margin: 0 30px 30px;
 }
 
@@ -461,20 +455,16 @@
     right: 25px;
   }
 
-  .card__text {
-    padding-bottom: 29px;
-  }
-
   .card .card__text:nth-of-type(2n) {
     padding-bottom: 23px;
   }
 
-  .footer__button {
+  .save__button {
     flex-direction: row;
     align-items: center;
   }
 
-  .footer__floppy {
+  .save__floppy {
     margin: 0 8px 0 0;
     width: 21px;
     height: 21px;
