--- a/styles/style.css
+++ b/styles/style.css
@@ -243,7 +243,7 @@
 
 .contour {
   fill: currentColor;
-  transition: 0.3s;
+  transition: 0.3s linear;
 }
 
 .like-icon.is-liked .contour {
@@ -298,7 +298,7 @@
   background: var(--bg-color);
   border: 2px solid var(--main-color);
   color: var(--main-color);
-  transition: 0.5s ease-in-out;
+  transition: 0.3s ease-in-out;
   overflow: hidden;
   position: relative;
 }
@@ -321,7 +321,6 @@
 
 .button:hover::before {
   transform: translateX(0);
-  transition: 0.5s ease-in-out;
 }
 
 .card__like-button {
